# holographit

./: .gitignore  README.md
holocli/: Cargo.toml
holocli/src/: cli.rs  main.rs
holoscribe/: Cargo.toml  out.csv
holoscribe/src/: cli.rs  lib.rs  main.rs  model.rs
holoscribe/src/scriber/: mod.rs
holoviz/: .gitignore  Cargo.toml  style.css
holoviz/src/: cli.rs  lib.rs  main.rs  visualizer.rs
holoviz/tests/: test-helper.sh
holoweb/: Cargo.toml
holoweb/src/: main.rs
holoweb/templates/: index.html
