[package]
name = "holocli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
holoscribe = { path = "../holoscribe"}
clap = { version = "4.1.6", features = ["derive"] }
regex = "1"
svg = "0.13.0"
thiserror = "1.0.38"