[package]
name = "holoviz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svg = "0.13.0"
clap = {version = "4", features=["derive"]}
glam = "0.23.0"
is_close = "0.1.3"

[profile.release]
debug = true

[profile.bench]
debug = true
