[package]
name = "holoweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
holoscribe = {path="../holoscribe"}
holoviz = {path="../holoviz"}
svg = "0.13.0"
serde = { version = "1", features=["derive"]}
tera = "1.18.1"
